[package]
name = "squads-rustfsm"
version = "0.1.1"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2024"
license-file = "LICENSE.txt"
description = "Define state machines that can accept events and produce commands"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["state-machine", "fsm"]
categories = ["data-structures"]

[dependencies]
squads-rustfsm-procmacro = { version = "0.1.1", path = "rustfsm_procmacro" }
squads-rustfsm-trait = { version = "0.1.1", path = "rustfsm_trait" }

[package.metadata.workspaces]
independent = true

[lints]
workspace = true
