[package]
name = "squads-rustfsm-procmacro"
version = "0.1.1"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2024"
license-file = "LICENSE.txt"
description = "Procmacro sub-crate of the `rustfsm` crate"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
derive_more = { workspace = true }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["default", "extra-traits"] }
quote = "1.0"
squads-rustfsm-trait = { version = "0.1.1", path = "../rustfsm_trait" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[package.metadata.workspaces]
independent = true
