[package]
name = "squads-rustfsm-trait"
version = "0.1.1"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2024"
license-file = "LICENSE.txt"
description = "Trait sub-crate of the `rustfsm` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.workspaces]
independent = true
